--- a/accueil.html
+++ b/accueil.html
@@ -624,7 +624,7 @@
         </div>
 
         <!-- Grille des membres -->
-        <div class="team-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 40px; margin-top: 80px; position: relative;">
+       <div class="team-grid" style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 40px; margin-top: 80px; position: relative; max-width: 1200px; margin-left: auto; margin-right: auto;">
             
             <!-- Membre 1 - Amine Douiri -->
             <div class="team-card" style="background: white; border-radius: 20px; padding: 0; overflow: hidden; box-shadow: var(--shadow); transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); position: relative;">
