--- a/accueil.html
+++ b/accueil.html
@@ -639,7 +639,7 @@
                         Étudiant en Cybersécurité
                     </div>
                     <p style="color: var(--text-light); line-height: 1.6;">
-                        Responsable du développement de la plateforme complète, de l'architecture technique et création du module "Optimiser LinkedIn".
+                        Responsable du développement de la plateforme , de l'architecture technique et création du module "Optimiser LinkedIn".
                     </p>
                 </div>
             </div>
@@ -956,3 +956,4 @@ document.addEventListener('DOMContentLoaded', function() {
     <script src="js/ui.js"></script>
 </body>
 </html>
+
