--- a/contact.html
+++ b/contact.html
@@ -299,7 +299,7 @@
                 
                 <div class="info-item">
                     <h4>📍 Adresse</h4>
-                    <p>École Supérieure d'Informatique<br>
+                    <p>École des scienses et  d'Informations<br>
                     Rabat, Maroc</p>
                 </div>
                 
@@ -361,7 +361,7 @@
 
 <footer>
     <p>Plateforme collaborative pour aider les étudiants à trouver les meilleurs stages</p>
-    <p>© 2025 EsiCareerBridge. Tous droits réservés.</p>
+    <p>© 2025 EsiCareerBridge . Tous droits réservés.</p>
 </footer>
 
 <script src="js/storage.js"></script>
@@ -401,3 +401,4 @@
 
 </body>
 </html>
+
